Removed previous form

--- a/WebServer/WebContent/index.html
+++ b/WebServer/WebContent/index.html
@@ -5,24 +5,6 @@
 <title>Fact Checking</title>
 </head>
 <body>
-<h1>Fact Checking</h1>
-<form name="fc" method="post" action="s_p_o">
-  Enter Subject:<br>
-  <input type="text" name="subject" id="subject">
-  <br>
-  Enter Predicate:<br>
-  <input type="text" name="predicate" id="predicate">
-  <br>
-  Enter Object:<br>
-  <input type="text" name="object" id="object">
-  <br><br>
-  <select id="algorithm">
-  <option value="KStream">KStream</option>
-  <option value="KLinker">KLinker</option>
-  </select>
-<br><br>
-<br><br>
-  <input type="submit" value="Submit">
-</form>
+<h1>Server is now running...</h1>
 </body>
 </html>
